<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SDSU Dining</string>
    <string name="action_settings">Settings</string>
    <string name="loadingString">Loading</string>
    <string name="gcmNotificationTitle">SDSU Dining</string>
    <string name="home">Home</string>
    <string name="menuItemString">Menu Item</string>
    <string name="restaurantsString">Restaurants</string>
    <string name="farmersMarketString">Farmer\'s Market</string>
    <string name="couponsString">Coupons</string>
    <string name="cateringString">Catering</string>
    <string name="sweetString">Sweet</string>
    <string name="contactUsString">Contact Us</string>
    <string name="browseByMapString">Eatery Locations</string>
    <string name="closeToMeString">Close To Me</string>
    <string name="openNowString">Open Now</string>
    <string name="restaurantsImagesFolder">restaurantsImagesFolder</string>
    <string name="title_activity_plain_test_list_item">PlainTestListItemActivity</string>
    <string name="noCouponsString">There are no coupons available at this time</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="about">About</string>
    <string name="aboutUsString">About Us</string>
     <string name="image">image</string>
    <string name="phone">Phone</string>
    <string name="fax">Fax</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="hours">Hours</string>
    <string name="restaurantStatus">restaurantStatus</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="parserObserverComplete">Complete</string>
    <string name="DATABASE_NAME">sdsuDiningDB</string>
    <string name="RESTAURANTS_URL">http://rohan.sdsu.edu/~jayaprak/sdsuDining/restaurants.html</string>
    <string name="RESTAURANTS_OBJECT_TAG">restaurants</string>
    <string name="RESTAURANT_TABLE">restaurantTable</string>
    <string name="RESTAURANT_ID">restaurant_id</string>
    <string name="RESTAURANT_NAME">restaurant_name</string>
    <string name="RESTAURANT_IMAGE">image</string>
    <string name="RESTAURANT_LOCATION_ID">location_id</string>
    <string name="RESTAURANT_LOCATION_NAME">location_name</string>
    <string name="RESTAURANT_PHONE">phone</string>
    <string name="RESTAURANT_WEBSITE">website</string>
    <string name="LOCATION_TABLE">locationTable</string>
    <string name="LOCATION_ID">locationId</string>
    <string name="LOCATION_NAME">locationName</string>
    <string name="DB_ID">id</string>
    <string name="LAST_MODIFIED">lastModified</string>
    <string name="ACTIVE">active</string>
    <string name="DB_PHONE">phone</string>
    <string name="DB_FAX">fax</string>
    <string name="DB_EMAIL">email</string>
    <string name="DB_WEBSITE">website</string>
    <string name="DB_ADDRESS">address</string>
    <string name="DB_ABOUT">about</string>
    <string name="FARMERS_URL">http://rohan.sdsu.edu/~jayaprak/sdsuDining/farmersMarket.html</string>
    <string name="FARMERS_OBJECT_TAG">farmersMarket</string>
    <string name="FARMERS_TABLE">farmersMarketTable</string>
    <string name="CATERING_URL">http://rohan.sdsu.edu/~jayaprak/sdsuDining/catering.html</string>
    <string name="CATERING_OBJECT_TAG">catering</string>
    <string name="CATERING_TABLE">cateringTable</string>
    <string name="COUPON_URL">http://rohan.sdsu.edu/~jayaprak/sdsuDining/coupons.html</string>
    <string name="COUPON_OBJECT_TAG">coupons</string>
    <string name="COUPON_TABLE">couponsTable</string>
    <string name="COUPON_ID">coupon_id</string>
    <string name="COUPON_IMAGE">image</string>
    <string name="COUPON_EXPIRATION">expiration</string>
    <string name="SWEET_URL">http://rohan.sdsu.edu/~jayaprak/sdsuDining/sweet.html</string>
    <string name="SWEET_OBJECT_TAG">sweet</string>
    <string name="SWEET_TABLE">sweetTable</string>
    <string name="CONTACT_URL">http://rohan.sdsu.edu/~jayaprak/sdsuDining/contactUs.html</string>
    <string name="CONTACT_OBJECT_TAG">contactUs</string>
    <string name="CONTACT_TABLE">contactTable</string>
    <string name="HOURS_URL">http://rohan.sdsu.edu/~jayaprak/sdsuDining/hours.html</string>
    <string name="HOURS_OBJECT_TAG">hours</string>
    <string name="HOURS_TABLE">hoursTable</string>
    <string name="HOURS_RESTAURANT_ID">restaurant_id</string>
    <string name="HOURS_DAY">day</string>
    <string name="HOURS_DAYHOURS">dayHours</string>
    <string name="HOURS_OPEN">open</string>
    <string name="HOURS_CLOSE">close</string>
    <string name="GCM_TABLE">gcmTable</string>
    <string name="GCM_REG_ID">regId</string>
    <string name="title_activity_catering_contact">CateringContactActivity</string>
    <string name="title_activity_display_info_fragment">DisplayInfoFragment</string>
    <string name="title_activity_display_contact_fragment">DisplayContactFragment</string>
    <string name="title_activity_display_web_fragment">DisplayWebFragment</string>
    <string name="title_activity_restaurant_list_row">RestaurantListRow</string>
    <string name="title_activity_browse_by_location_list_row">BrowseByLocationListRow</string>
    <string name="title_activity_restaurants_details">RestaurantsDetails</string>
    <string name="title_activity_display_restaurant_info_fragment">DisplayRestaurantInfoFragment</string>
    <string name="title_activity_restaurants_at_location_list">RestaurantsAtLocationListActivity</string>
    <string name="title_activity_restaurants_at_location_list_row">RestaurantsAtLocationListRowActivity</string>
    <string name="title_activity_coupons_list_row">CouponsListRow</string>
    <string name="title_activity_loading">LoadingActivity</string>

</resources>
