<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/categoriesLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!--  <ImageButton
            android:id="@+id/restaurantsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/restaurants"
            android:contentDescription="@string/restaurantsString"
            android:scaleType="center" />        

        <ImageButton
            android:id="@+id/farmersMarketButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/farmersmarket"
            android:contentDescription="@string/farmersMarketString"
            android:scaleType="center" />

        <ImageButton
            android:id="@+id/couponsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/coupons"
            android:contentDescription="@string/couponsString" />

        <ImageButton
            android:id="@+id/cateringButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/catering"
            android:contentDescription="@string/cateringString" />

        <ImageButton
            android:id="@+id/sweetButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sweet"
            android:contentDescription="@string/sweetString" />

        <ImageButton
            android:id="@+id/contactUsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/contactus"
            android:contentDescription="@string/contactUsString" />
            -->
        
        <ImageView
            android:id="@+id/restaurantsButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/restaurantsString" />
        
        <ImageView
            android:id="@+id/farmersMarketButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/farmersMarketString" />

        <ImageView
            android:id="@+id/couponsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/couponsString" />
        
        <ImageView
            android:id="@+id/cateringButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cateringString" />

        <ImageView
            android:id="@+id/sweetButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/sweetString" />

        <ImageView
            android:id="@+id/contactUsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/contactUsString" />

    </LinearLayout>

    
</ScrollView>